Fixes bug causing image distortion

--- a/src/sections/2-AboutMe/AboutMe.module.css
+++ b/src/sections/2-AboutMe/AboutMe.module.css
@@ -66,6 +66,8 @@
   .image {
     width: auto;
     height: 550px;
+    object-fit: contain;
+
   }
 
   .container {
